adicionado email para contato

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -36,6 +36,9 @@
    "metadata": {},
    "source": [
     "Vinicius Silva Amâncio:\n",
+    "- emails para contato:\n",
+    "    - vinicius.amancio@estudante.ifms.edu.br (acadêmico)\n",
+    "    - vnamn@proton.me (pessoal)\n",
     "- 9° Período de Engenharia de Computação\n",
     "- Participação Acadêmica: Monitoria, IC, SEENG e Viagens Técnicas\n",
     "- Segundo estágio (Ciência de Dados) em uma consultoria de São Paulo, SP.\n",
